--- a/Pages/Docente/Create.cshtml
+++ b/Pages/Docente/Create.cshtml
@@ -2,46 +2,43 @@
 @model EsperiaHelp.Pages.Teacher.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creazione";
 }
 
-<h1>Create</h1>
+<h1 class="text-danger">Crea corso</h1>
 
-<h4>Lesson</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Lesson.Date" class="control-label"></label>
+                <label asp-for="Lesson.Date" class="control-label">Data</label>
                 <input asp-for="Lesson.Date" class="form-control" />
                 <span asp-validation-for="Lesson.Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Lesson.StartTime" class="control-label"></label>
+                <label asp-for="Lesson.StartTime" class="control-label">Inizio corso</label>
                 <input type="time" asp-for="Lesson.StartTime" class="form-control" />
                 <span asp-validation-for="Lesson.StartTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Lesson.EndTime" class="control-label"></label>
+                <label asp-for="Lesson.EndTime" class="control-label">Fine corso</label>
                 <input type="time" asp-for="Lesson.EndTime" class="form-control" />
                 <span asp-validation-for="Lesson.EndTime" class="text-danger"></span>
             </div>
-            Aula: <select  asp-for="ClassroomLesson"  asp-items="Model.Classrooms">
+            Aula <select  asp-for="ClassroomLesson"  asp-items="Model.Classrooms">
                 <option value=""></option>
             </select>
-
-
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-success"><i class="fas fa-check" style="color: white;"></i></a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Torna ai tuoi corsi</a>
 </div>
 
 @section Scripts {
