--- a/Pages/Materie/Index.cshtml
+++ b/Pages/Materie/Index.cshtml
@@ -12,7 +12,7 @@
         <thead class="bg-danger text-white">
             <tr>
                 <th>
-                    Materie
+                    Materia
                 </th>
                 <th></th>
             </tr>
