--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -67,8 +67,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container text-center">
+    <footer class="footer text-muted bg-dark">
+        <div class="container text-center text-white font-weight-bold">
             &copy; 2020 I.T.I.S. "P. Paleocapa" | <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
